# pyCryptoTraderBot

./: .gitignore  Dockerfile  Dockerfile.dev  Further_Commits.txt  README.md  build_dev_image.sh  comment-tags.py  commitTemplate.txt  config.py  docker-compose.yml  done_flow.drawio  future_flow.drawio  nobitex_data.py  project_path.env  pyproject.toml  run_dev_image.sh  trader.py  workflow.drawio
Application/: __init__.py
Application/Docs/: strategy_01.txt
Application/api/: api_service.py  nobitex_api.py  utils.py
Application/configs/: admin_config.py  back_testing_config.json  config.json  config.py  logging_config.json  logs_config.json  profile_config.py  signal_config.json  strategy.json
Application/data/: data_manager.py  data_processor.py  data_tools.py  exchange.py  initial_data.py  user.py  validator.py
Application/execution/: bot.py  executioner.py  scheduler.py
Application/strategy_testing/: back_testing_config_fields.py
Application/tasks/: Further_Commits.txt  System_Architecture_Thoughts.txt  comment-tags.py
Application/trading/: __init__.py  portfolio_manager.py  slippage.py  strategy_fields.py  trade_engine.py  trader.py  trading_approach_functions.py  trading_flow_functions.py  trading_workflow.py
Application/utils/: botlogger.py  event_channels.py  event_handler.py  load_json.py  logs.py  monitoring.py  reporter.py  (+1 more)
NobitexTrader/: comment-tags.py  config.py  data_manager.py  exchange.py  executioner.py  nobitex_data.py  trader.py
Temp/: dispatcher_test.py
development_utilities/: .bashrc  manual_script.sh  vscode_settings.json
(+68 files in other folders)
