[tool.poetry]
name = "nobitex-trader"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
pandas = "^2.2.2"
requests = "^2.31.0"
persiantools = "^4.0.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
